--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
+    "firebase": "^11.2.0",
     "my": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-router": "^7.1.3",
+    "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1"
   },
   "scripts": {
