--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/lab": "^6.0.0-beta.25",
+    "@mui/material": "^6.4.2",
+    "@mui/x-date-pickers": "^7.25.0",
     "cra-template": "1.2.0",
+    "dayjs": "^1.11.13",
     "firebase": "^11.2.0",
     "my": "file:",
     "react": "^19.0.0",
